[metadata]
name = snap-console
version = 1.0.3
author = Kenneth-LJS
author_email = kenneth_ljs@live.com
description = Easy-to-use interactive console for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kenneth-LJS/snap-console
project_urls =
    Bug Tracker = https://github.com/Kenneth-LJS/snap-console/issues
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Environment :: Console
    Environment :: Console :: Curses
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src